Add nav and team member template

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 </head>
 
 <body>
+    <nav class="nav justify-content-center">
+        <a class="nav-link active" href="#">Team member</a>
+        <a class="nav-link" href="#">Join the team</a>
+    </nav>
+    <section id="members">
+        <!-- <div class="">
+            <div class="">
+                <img src="img/male1.png" alt="Marco Bianchi" />
+            </div>
+            <div class="">
+                <h3>Marco Bianchi</h3>
+                <p>Designer</p>
+                <p>marcobianchi@team.com</p>
+            </div>
+        </div> -->
+
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
