--- a/join-us.html
+++ b/join-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Team</title>
+    <title>Join us</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,33 +10,32 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <script type="module" src="script.js"></script>
 </head>
 
 <body>
     <nav class="nav justify-content-center">
-        <a class="nav-link active" href="#">Team member</a>
-        <a class="nav-link" href="join-us.html">Join the team</a>
+        <a class="nav-link active" href="index.html">Team member</a>
+        <a class="nav-link" href="#">Join the team</a>
     </nav>
     <div>
-        <h1 class="d-flex justify-content-center m-2 mb-4">Il nostro team</h1>
-
+        <h3 class="d-flex justify-content-center m-2 mb-4">Join us</h3>
     </div>
-    <section class="container">
-        <div id="members" class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- <div class="col">
-                <div class="card">
-                    <img src="/${value.img}" alt="" class="card-img-top" />
-                    <div class="card-body">
-                        <h5 class="card-title">${value.name}</h5>
-                        <p class="card-text">${value.role}</p>
-                        <p class="card-text">${value.email}</p>
-                    </div>
-                </div>
-            </div> -->
+    <form class="">
+        <div class="row g-3 d-flex justify-content-around">
+            <div class="col-9 m-1">
+                <input type="text" class="form-control" placeholder="Name" aria-label="First name">
+            </div>
+            <div class="col-9 m-1">
+                <input type="text" class="form-control" placeholder="Role" aria-label="Last name">
+            </div>
+            <div class="col-9 m-1">
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            </div>
+            <div class="col-9 m-1">
+                <input type="file" name="" id="">
+            </div>
         </div>
-    </section>
+    </form>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
