--- a/join-us.html
+++ b/join-us.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="script.js"></script>
 </head>
 
 <body>
@@ -23,18 +25,23 @@
     <form class="">
         <div class="row g-3 d-flex justify-content-around">
             <div class="col-9 m-1">
-                <input type="text" class="form-control" placeholder="Name" aria-label="First name">
+                <input id="inpName" type="text" class="form-control" placeholder="Name" aria-label="First name">
             </div>
             <div class="col-9 m-1">
-                <input type="text" class="form-control" placeholder="Role" aria-label="Last name">
+                <input id="inpRole" type="text" class="form-control" placeholder="Role" aria-label="Last name">
             </div>
             <div class="col-9 m-1">
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                <input id="inpEmail" type="email" class="form-control" id="inputEmail4" placeholder="Email">
             </div>
             <div class="col-9 m-1">
-                <input type="file" name="" id="">
+                <input type="file" name="" id="inpImg">
             </div>
         </div>
+        <div class="d-flex justify-content-center m-2">
+            <button id="submit" type="submit" class="btn btn-primary mr-2">Submit</button>
+            <button type="reset" class="btn btn-primary">Delete</button>
+        </div>
+
     </form>
 
     <!-- Optional JavaScript -->
