--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
             </div> -->
         </div>
     </section>
+    <div>
+        <h3 class="d-flex justify-content-center m-2 mb-4">Join us</h3>
+    </div>
+    <form class="">
+        <div class="row g-3 d-flex justify-content-around">
+            <div class="col-9 m-1">
+                <input id="inpName" type="text" class="form-control" placeholder="Name" aria-label="First name">
+            </div>
+            <div class="col-9 m-1">
+                <input id="inpRole" type="text" class="form-control" placeholder="Role" aria-label="Last name">
+            </div>
+            <div class="col-9 m-1">
+                <input id="inpEmail" type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            </div>
+            <div class="col-9 m-1">
+                <input type="file" name="" id="inpImg">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center m-2">
+            <button id="submit" type="submit" class="btn btn-primary mr-2">Submit</button>
+            <button type="reset" class="btn btn-primary">Delete</button>
+        </div>
+    </form>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
