--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 <input id="inpEmail" type="email" class="form-control" id="inputEmail4" placeholder="Email">
             </div>
             <div class="col-9 m-1">
-                <input type="file" name="" id="inpImg">
+                <input id="inpImg" type="text" class="form-control" id="inputEmail4" placeholder="Foto">
+            </div>
+            <div class="col-9 m-1">
+                <input type="file" name="" id="">
             </div>
         </div>
         <div class="d-flex justify-content-center m-2">
