return to the original idea with form on the second page, saving data whit sessionStorage

--- a/join-us.html
+++ b/join-us.html
@@ -31,11 +31,13 @@
                 <input id="inpRole" type="text" class="form-control" placeholder="Role" aria-label="Last name">
             </div>
             <div class="col-9 m-1">
-                <input id="inpEmail" type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                <input id="inpEmail" type="email" class="form-control" placeholder="Email">
             </div>
             <div class="col-9 m-1">
-                <input type="file" name="" id="inpImg">
-            </div>
+                <input id="inpImg" type="email" class="form-control" placeholder="Foto">
+            </div <div class="col-9 m-1">
+            <input type="file" name="" id="inpImg">
+        </div>
         </div>
         <div class="d-flex justify-content-center m-2">
             <button id="submit" type="submit" class="btn btn-primary mr-2">Submit</button>
@@ -44,9 +46,10 @@
     </form>
 
     <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        integrity="sha384-q8i/X+965DzO0rR7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
